# databricks-vscode

./: .gitignore  README.md  databricks.template.yml  pyproject.toml
notebooks/: demo.ipynb  demo.py
scripts/: demo.py  spark-demo.py
